virion : Add arrayutils v4.0.0

--- a/.poggit.yml
+++ b/.poggit.yml
@@ -7,4 +7,7 @@ projects:
     type: library
     lint:
       phpstan: false
+    libs:
+      - src: PresentKim/arrayutils/arrayutils
+        version: ^4.0.0
 ...
