:wrench: Remove "Blugin-team" from authors

--- a/virion.yml
+++ b/virion.yml
@@ -3,6 +3,6 @@ name: png-converter
 antigen: kim\present\converter\png
 version: 1.0.2
 api: 3.0.0
-authors: [PresentKim, Blugin-team]
+authors: [ PresentKim ]
 description: Converter to convert png file to SkinImage
 ...
